--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>CV - Viliam Vrba</title>
+  <title>CV-Viliam Vrba</title>
   <meta name="description" content="simple CV example created with HTML and CSS">
   <meta name="author" content="Fly Nerd">
   <link rel="icon" href="./img/favicon.ico">
@@ -14,7 +14,7 @@
 <body>
   <header>
     <div>
-      <img src="./img/avatar.jpg" />
+      <img src="./img/IMG_1417-min.jpg" />
     </div>
     <h1>Viliam Vrba</h1>
     <section>
@@ -25,7 +25,7 @@
       <a href="https://www.twitter.com/flynerdpl/" target="_blank">
         <i class="fab fa-twitter"></i>
       </a>
-      <a href="https://github.com/ritaly" target="_blank">
+      <a href="https://github.com/Vilo138" target="_blank">
         <i class="fab fa-github-alt"></i>
       </a>
       <a href="https://www.instagram.com/flynerdpl/" target="_blank">
