--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1>Viliam Vrba</h1>
     <section>
       <p>Hello! I am Viliam Vrba. I work as interface and front-end developer. I have passion for pixel perfect, minimal and easy to use interfaces. I'm  focused, dedicated, hard-working and willing to learn in a changing and challenging environment.</p>
-      <a href="https://www.facebook.com/flynerdpl/" target="_blank">
+      <a href="https://www.facebook.com/wwwrbaf/" target="_blank">
         <i class="fab fa-facebook-f"></i>
       </a>
       <a href="https://www.twitter.com/flynerdpl/" target="_blank">
@@ -28,7 +28,7 @@
       <a href="https://github.com/Vilo138" target="_blank">
         <i class="fab fa-github-alt"></i>
       </a>
-      <a href="https://www.instagram.com/flynerdpl/" target="_blank">
+      <a href="https://www.instagram.com/wwwrba/" target="_blank">
         <i class="fab fa-instagram"></i>
       </a>
       <a href="https://www.linkedin.com/in/ritalyczywek/" target="_blank">
