pridal som jazyky

--- a/index.html
+++ b/index.html
@@ -95,11 +95,14 @@
         </div>
         <div>
           <h4>Languages</h4>
-          <p>🇵🇱 Polish - Native speaker</p>
+          <p>🇸🇰 Slovak - Native speaker</p>
+          <p>🇨🇿 Czech - Proficient C2</p>
           <p>🇬🇧 English - Proficient C1/C2</p>
-          <p>🇫🇷 French - Advanced - C1</p>
-          <p>🇪🇸 Spanish - Intermediate - B1/B2</p>
-          <p>🇩🇪 German - Elementary / Communicative - A2</p>
+          <p>🇷🇺 Russian - Advanced C1</p>
+          
+
+          <!--<p>🇪🇸 Spanish - Intermediate - B1/B2</p>
+          <p>🇩🇪 German - Elementary / Communicative - A2</p> -->
         </div>
       </div>
     </section>
@@ -141,7 +144,7 @@
     </section>
   </main>
   <footer>
-    <p>Created by: <a href="https://www.flynerd.pl/">@flynerd</a>  / <a href="https://www.linkedin.com/in/ritalyczywek/">LinkedIn</a> / 2018 </p>
+    <p>Created by: <a href="https://www.flynerd.pl/">@flynerd</a>  / <a href="https://www.linkedin.com/in/ritalyczywek/">LinkedIn</a> / 2024 </p>
   </footer>
 </body>
 </html>
