nova fotka, zmeny v texte

--- a/index.html
+++ b/index.html
@@ -14,26 +14,30 @@
 <body>
   <header>
     <div>
-      <img src="./img/IMG_1417-min.jpg" />
+      <img src="./img/IMG_1417.jpg" />
     </div>
     <h1>Viliam Vrba</h1>
     <section>
-      <p>Hello! I am Viliam Vrba. I work as interface and front-end developer. I have passion for pixel perfect, minimal and easy to use interfaces. I'm  focused, dedicated, hard-working and willing to learn in a changing and challenging environment.</p>
+      <p>Hello! I am Viliam Vrba. I study Automation a Information Engineering in Chemichal Industry at UIAM STU. I have passion for pixel perfect, minimal and easy to use interfaces. I'm  focused, dedicated, hard-working and willing to learn in a changing and challenging environment. <br> https://www.uiam.sk/index.php?lang=en </p>
       <a href="https://www.facebook.com/wwwrbaf/" target="_blank">
         <i class="fab fa-facebook-f"></i>
       </a>
+      <!--
       <a href="https://www.twitter.com/flynerdpl/" target="_blank">
         <i class="fab fa-twitter"></i>
       </a>
+      -->
       <a href="https://github.com/Vilo138" target="_blank">
         <i class="fab fa-github-alt"></i>
       </a>
       <a href="https://www.instagram.com/wwwrba/" target="_blank">
         <i class="fab fa-instagram"></i>
       </a>
+      <!--
       <a href="https://www.linkedin.com/in/ritalyczywek/" target="_blank">
         <i class="fab fa-linkedin-in"></i>
       </a>
+      -->
     </section>
   </header>
   <main>
@@ -65,7 +69,7 @@
       </article>
       <article class='course'>
         <div class='title'>
-          <h4>Django Girls: 2-Day Workshops</h4>
+          <h4>Django Boys: 2-Day Workshops</h4>
         </div>
         <div class="descrition">
           <p>Learn back-end development with simple blog application using Django  framework.</p>
@@ -80,8 +84,11 @@
           <ul>
             <li>HTML5</li>
             <li>CSS</li>
-            <li>JavaScript ES5/6</li>
+            <li>JavaScript</li>
             <li>SQL</li>
+            <li>Python</li>
+            <li>MATLAB</li>
+            <li>Simulink</li>
           </ul>
         </div>
         <div class='column'>
@@ -89,8 +96,8 @@
           <ul>
             <li>jQuery</li>
             <li>NodeJS</li>
-            <li>MongoDB</li>
-            <li>Django</li>
+            <li>React</li>
+           <!-- <li>Django</li>-->
           </ul>
         </div>
         <div>
@@ -111,18 +118,18 @@
       <h3>Education</h3>
       <article>
         <div class='school'>
-          <span>2015-2018</span> <strong>Octocats tech academy</strong>
+          <span>2022-now</span> <strong>STU FCHPT UIAM</strong>
         </div>
         <div class="descrition">
-          Bechelor Degree of Octorobotics
+          Process control - Automation and Information Engineering in Chemical Industry
         </div>
       </article>
       <article>
         <div class='school'>
-          <span>2012-2015</span> <strong>Underwater kittens high school</strong>
+          <span>2017-2022</span> <strong>Gymnázium Alberta Einsteina - Russian section</strong>
         </div>
         <div>
-          Main subject: Cathemathics
+          Main subjects: Chemistry, Biology, Physics, Russian language
         </div>
       </article>
     </section>
