--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     </div>
     <h1>Viliam Vrba</h1>
     <section>
-      <p>Hello! I am Viliam Vrba. I study Automation a Information Engineering in Chemichal Industry at UIAM STU. I have passion for pixel perfect, minimal and easy to use interfaces. I'm  focused, dedicated, hard-working and willing to learn in a changing and challenging environment. <br> <a href ='https://www.uiam.sk/index.php?lang=en' ></a> </p>
+      <p>Hello! I am Viliam Vrba. I study Automation a Information Engineering in Chemichal Industry at UIAM STU. I have passion for pixel perfect, minimal and easy to use interfaces. I'm  focused, dedicated, hard-working and willing to learn in a changing and challenging environment. <br> 
+      <a href ='https://www.uiam.sk/index.php?lang=en'  target="_blank"> <i class="fab fa-uiam"></i>></a> </p>
       <a href="https://www.facebook.com/wwwrbaf/" target="_blank">
         <i class="fab fa-facebook-f"></i>
       </a>
