upravy udajov v subore index.html

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <p>🇨🇿 Czech - Proficient C2</p>
           <p>🇬🇧 English - Proficient C1</p>
           <p>🇷🇺 Russian - Advanced C1</p>
-          <p>bulgarian</p>
+          
           
 
           <!--<p>🇪🇸 Spanish - Intermediate - B1/B2</p>
@@ -146,7 +146,16 @@
       <h3>Erasmus Workshops</h3>
       <article>
         <div class='job-title'>
-          <span>22.03.2020 - 30.08.2020</span> <strong>Political Games Bansko Bulgaria 🇧🇬 </strong><br> 
+            <span>07.08.2021 - 17.08.2021</span> <strong>Disconnect to Reconnect, Passignano sul Trasimeno, Italy 🇮🇹 </strong><br> 
+        </div>
+        <div class="descrition">
+          'Disconnect to Reconnect YE' is a youth exchange program encouraging digital well-being through outdoor activities and mindfulness workshops. Participants learn to balance their screen time, fostering healthier relationships with technology and enhancing mental well-being."<br>
+            <a href="https://youthfullyyours.sk/sk/projekty/disconnect-to-reconnect_ye/" target="_blank">Disconnect to Reconnect link</a>
+        </div>
+      </article>
+      <article>
+        <div class='job-title'>
+          <span>22.03.2020 - 30.08.2020</span> <strong>Political Games, Bansko, Bulgaria 🇧🇬 </strong><br> 
         </div>
         <div class="descrition">
           The "POL Games YE20" project by Youthfully Yours SK is an international youth exchange program encouraging teamwork, cultural exchange, and personal growth through diverse activities. Participants from various countries collaborate in games and workshops to enhance social and leadership skills, fostering mutual understanding among youth.<br>
