--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <h1>Viliam Vrba</h1>
     <section>
-      <p>Hello! I am Viliam Vrba. I studying Automation a Information Engineering in Chemichal Industry at UIAM STU. I'm  focused, dedicated, hard-working and willing to learn in a changing and challenging environment. Feel free to check my GitHub programming portfolio below.<br> 
+      <p>Hello! I am Viliam Vrba. I'm studying Automation a Information Engineering in Chemichal Industry at UIAM STU. I'm  focused, dedicated, hard-working and willing to learn in a changing and challenging environment. Feel free to check my GitHub programming portfolio below.<br> 
       <!--
         <a href ='https://www.uiam.sk/index.php?lang=en'  target="_blank"> <i class="fab fa-uiam"></i>></a> </p>
       <a href="https://www.facebook.com/xxxx/" target="_blank">
