added linkedin link to index.html

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
       <a href="https://www.instagram.com/wwwrba/" target="_blank">
         <i class="fab fa-instagram"></i>
       </a>
-      <!--
-      <a href="https://www.linkedin.com/in/xxxxx/" target="_blank">
+      
+      <a href="https://www.linkedin.com/in/viliam-vrba-7031b9312//" target="_blank">
         <i class="fab fa-linkedin-in"></i>
       </a>
-      -->
+      
     </section>
   </header>
   <main>
