--- a/index.html
+++ b/index.html
@@ -147,7 +147,16 @@
     </section>
 
     <section>
-      <h3>Erasmus Workshops</h3>
+      <h3>Erasmus/Workshops</h3>
+      <article>
+        <div class='job-title'>
+            <span>08.07.2024 - 19.07.2024</span> <strong>Resilient Cities Summer School, Bratislava & Ljublana, Italy 🇮🇹 </strong><br> 
+        </div>
+        <div class="descrition">
+          'Disconnect to Reconnect YE' is a youth exchange program encouraging digital well-being through outdoor activities and mindfulness workshops. Participants learn to balance their screen time, fostering healthier relationships with technology and enhancing mental well-being."<br>
+            <a href="https://youthfullyyours.sk/sk/projekty/disconnect-to-reconnect_ye/" target="_blank">Disconnect to Reconnect link</a>
+        </div>
+      </article>
       <article>
         <div class='job-title'>
             <span>07.08.2021 - 17.08.2021</span> <strong>Disconnect to Reconnect, Passignano sul Trasimeno, Italy 🇮🇹 </strong><br> 
