pridal som erasmy

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <h3>Erasmus/Workshops</h3>
       <article>
         <div class='job-title'>
-            <span>08.07.2024 - 19.07.2024</span> <strong>Resilient Cities Summer School, Bratislava & Ljublana, Italy 🇮🇹 </strong><br> 
+            <span>08.07.2024 - 19.07.2024</span> <strong>Resilient Cities Summer School, Bratislava & Ljubljana, Slovakia 🇸🇰 Slovenija 🇸🇮 </strong><br> 
         </div>
         <div class="descrition">
           'Disconnect to Reconnect YE' is a youth exchange program encouraging digital well-being through outdoor activities and mindfulness workshops. Participants learn to balance their screen time, fostering healthier relationships with technology and enhancing mental well-being."<br>
