pridal som novy workshop

--- a/index.html
+++ b/index.html
@@ -153,8 +153,10 @@
             <span>08.07.2024 - 19.07.2024</span> <strong>Resilient Cities Summer School, Bratislava & Ljubljana, Slovakia 🇸🇰 Slovenija 🇸🇮 </strong><br> 
         </div>
         <div class="descrition">
-          'Disconnect to Reconnect YE' is a youth exchange program encouraging digital well-being through outdoor activities and mindfulness workshops. Participants learn to balance their screen time, fostering healthier relationships with technology and enhancing mental well-being."<br>
-            <a href="https://youthfullyyours.sk/sk/projekty/disconnect-to-reconnect_ye/" target="_blank">Disconnect to Reconnect link</a>
+          The Resilient Cities Summer School focuses on developing innovative urban resilience solutions, combining hands-on workshops with expert-led discussions.
+          It brings together participants across Europe for collaborative projects aimed at enhancing urban sustainability and mobility.
+          The program offers exposure to cutting-edge practices in city planning and resilience, with activities split between Bratislava and Ljubljana. <br>
+          <a href="https://sites.google.com/kimitisik.eu/resilientcityschool/home" target="_blank">Resilient Cities Summer School link</a>
         </div>
       </article>
       <article>
