pridal som erasmus kosice

--- a/index.html
+++ b/index.html
@@ -148,6 +148,16 @@
 
     <section>
       <h3>Erasmus/Workshops</h3>
+      <article></article>
+        <div class='job-title'>
+            <span>15.08.2024 - 25.08.2024</span> <strong>Entrepreyouth, Košice, Slovakia 🇸🇰 </strong><br> 
+        </div>
+        <div class="descrition">
+          The EntrepreYouth project in Slovakia equips young adults with business skills like sales, marketing and financial management, while also enhancing soft skills such as leadership and public speaking.
+          It fosters an entrepreneurial mindset and supports participants from diverse backgrounds, preparing them to launch their ventures or excel in their careers. <br>
+          <!--<a href="xxxx" target="_blank">xxxx</a>-->
+        </div>
+      </article>
       <article>
         <div class='job-title'>
             <span>08.07.2024 - 19.07.2024</span> <strong>Resilient Cities Summer School, Bratislava & Ljubljana, Slovakia 🇸🇰 Slovenija 🇸🇮 </strong><br> 
