--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
     <section>
       <h3>Erasmus/Workshops</h3>
-      <article></article>
+      <article>
         <div class='job-title'>
             <span>15.08.2024 - 25.08.2024</span> <strong>Entrepreyouth, Košice, Slovakia 🇸🇰 </strong><br> 
         </div>
