--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
             <span>15.08.2024 - 25.08.2024</span> <strong>Entrepreyouth, Košice, Slovakia 🇸🇰 </strong><br> 
         </div>
         <div class="descrition">
-          The EntrepreYouth project in Slovakia equips young adults with business skills like sales, marketing and financial management, while also enhancing soft skills such as leadership and public speaking.
+          The EntrepreYouth project organised by BAC Slovakia equips young adults with business skills like sales, marketing and financial management, while also enhancing soft skills such as leadership and public speaking.
           It fosters an entrepreneurial mindset and supports participants from diverse backgrounds, preparing them to launch their ventures or excel in their careers. <br>
-          <!--<a href="xxxx" target="_blank">xxxx</a>-->
+          <a href="https://www.instagram.com/bacslovakia/" target="_blank">BAC Slovakia link</a>
         </div>
       </article>
       <article>
