--- a/index.html
+++ b/index.html
@@ -85,6 +85,16 @@
           <p>Primarily focused on manual testing for public administration in the healthcare sector. Utilized their testing environment, Excel for documentation, and JIRA for task management.</p>
         </div>
       </article>
+
+      <article>
+        <div class='job-title'>
+          <span>1.4.2025-Present</span> <strong>Automation Tester</strong>
+        </div>
+        <div class="descrition">
+          <p>Microstep HDO</p>
+          <p>Automation testing</p>
+        </div>
+      </article>
       
       </section>
     
